Added problem description.

--- a/report/DA - Report.tex
+++ b/report/DA - Report.tex
@@ -100,7 +100,8 @@ BCOR5mm, % Binding correction
 %----------------------------------------------------------------------------------------
 
 \section{Problem description}
- 
+The National Collegiate Athletic Association(NCAA) Basketball Tournament is not only a competition but also given an opportunity for college players to enter NBA, the world's most well-known professional Basketball league. We are given the historical data from 1985 to 2016 in regular season and try to predict every matchups in 2017 NCAA tournament.
+
 %----------------------------------------------------------------------------------------
 %	Dataset
 %----------------------------------------------------------------------------------------
@@ -254,7 +255,9 @@ The non-conference strength of schedule uses the 3 components only for this port
 %----------------------------------------------------------------------------------------
 
 \section{Future work}
-
+\begin{enumerate}
+\item There is missing values when we were mapping the kenpom data to kaggle data because some of the teams changed their name, left the league or rejoin the league. The dataset is inconsistency with each other. If you could calculate the statistical data directly not only parse it, the missing value problem should be solved.
+\end{enumerate}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
