Added dataset from 2002 to 2017.

--- a/DA - NCAA - Get Data Matrix.ipynb
+++ b/DA - NCAA - Get Data Matrix.ipynb
@@ -22,10 +22,11 @@
    "source": [
     "mt = pd.read_csv('dataset/kaggle/TourneyCompactResults.csv')\n",
     "mr = pd.read_csv('dataset/kaggle/RegularSeasonCompactResults.csv')\n",
+    "mt_17 = pd.read_csv('dataset/kaggle/2017_Final_CompactResults.csv')\n",
     "teams = pd.read_csv('dataset/kaggle/Teams.csv')\n",
     "\n",
     "pcbrl = list()\n",
-    "for s in range(2002, 2017):\n",
+    "for s in range(2002, 2018):\n",
     "    tmp = pd.read_csv('dataset/kenpom/PCBR_' + str(s) + '.csv')\n",
     "    tmp['Season'] = s\n",
     "    pcbrl.append(tmp)"
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -68,22 +69,22 @@
     {
      "data": {
       "text/plain": [
-       "(147339, 8)"
+       "(152734, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = pd.concat([mt,mr])\n",
+    "m = pd.concat([mt,mr,mt_17])\n",
     "m.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +432,7 @@
        "19    1985     137   1208      67   1455      59    N      0   1208   1455   1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -450,23 +451,23 @@
     {
      "data": {
       "text/plain": [
-       "(76774, 4)"
+       "(82169, 4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = m.loc[m.Season.isin(range(2002,2017)), ['Season','Team1','Team2','WL']]\n",
+    "data = m.loc[m.Season.isin(range(2002,2018)), ['Season','Team1','Team2','WL']]\n",
     "#data = m.loc[m.Season == 2002, ['Season','Team1','Team2','WL']]\n",
     "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -474,10 +475,10 @@
     {
      "data": {
       "text/plain": [
-       "(76774, 19)"
+       "(82169, 19)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -497,10 +498,10 @@
     {
      "data": {
       "text/plain": [
-       "(76774, 34)"
+       "(82169, 34)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1973,7 +1974,7 @@
        "[50 rows x 34 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1992,10 +1993,10 @@
     {
      "data": {
       "text/plain": [
-       "(76724, 34)"
+       "(82119, 34)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2007,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -2023,7 +2024,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2036,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2214,7 +2215,7 @@
        "4    0.011         5.87       104.9        99.0           3.57  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2243,7 +2244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2251,10 +2252,10 @@
     {
      "data": {
       "text/plain": [
-       "(76724, 20)"
+       "(82119, 20)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2265,13 +2266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data.to_csv('dataset/All_PCBR_For_2002_2016_Matchup.csv', index=False)"
+    "data.to_csv('dataset/All_PCBR_For_2002_2017_Matchup.csv', index=False)"
    ]
   }
  ],
