Added NN to the prediction script and generated files

--- a/DA - NCAA - Prediction 2017 A.ipynb
+++ b/DA - NCAA - Prediction 2017 A.ipynb
@@ -19,13 +19,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import linear_model, metrics"
+    "# LR\n",
+    "from sklearn import linear_model, metrics\n",
+    "# NN\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Dropout\n",
+    "from keras.optimizers import SGD\n",
+    "from keras.regularizers import l2, l1\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -52,24 +67,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log loss: 0.482438624789\n"
+      "Train on 69051 samples, validate on 7673 samples\n",
+      "Epoch 1/20\n",
+      "18s - loss: 0.5977 - val_loss: 0.5063\n",
+      "Epoch 2/20\n",
+      "18s - loss: 0.5134 - val_loss: 0.4978\n",
+      "Epoch 3/20\n",
+      "16s - loss: 0.5038 - val_loss: 0.4992\n",
+      "Epoch 4/20\n",
+      "17s - loss: 0.4993 - val_loss: 0.5002\n",
+      "Epoch 5/20\n",
+      "16s - loss: 0.4958 - val_loss: 0.5010\n",
+      "Epoch 6/20\n",
+      "16s - loss: 0.4948 - val_loss: 0.5048\n",
+      "Epoch 7/20\n",
+      "16s - loss: 0.4938 - val_loss: 0.5031\n",
+      "Epoch 8/20\n",
+      "17s - loss: 0.4910 - val_loss: 0.5072\n",
+      "Epoch 9/20\n",
+      "17s - loss: 0.4897 - val_loss: 0.5092\n",
+      "Epoch 10/20\n",
+      "17s - loss: 0.4900 - val_loss: 0.5094\n",
+      "Epoch 11/20\n",
+      "17s - loss: 0.4882 - val_loss: 0.5122\n",
+      "Epoch 12/20\n",
+      "17s - loss: 0.4869 - val_loss: 0.5134\n",
+      "Epoch 13/20\n",
+      "17s - loss: 0.4856 - val_loss: 0.5140\n",
+      "Epoch 14/20\n",
+      "18s - loss: 0.4862 - val_loss: 0.5211\n",
+      "Epoch 15/20\n",
+      "17s - loss: 0.4851 - val_loss: 0.5183\n",
+      "Epoch 16/20\n",
+      "16s - loss: 0.4853 - val_loss: 0.5214\n",
+      "Epoch 17/20\n",
+      "16s - loss: 0.4852 - val_loss: 0.5224\n",
+      "Epoch 18/20\n",
+      "16s - loss: 0.4839 - val_loss: 0.5240\n",
+      "Epoch 19/20\n",
+      "16s - loss: 0.4841 - val_loss: 0.5251\n",
+      "Epoch 20/20\n",
+      "16s - loss: 0.4841 - val_loss: 0.5261\n"
      ]
     }
    ],
    "source": [
+    "DataX = data_df.drop(['WL','Season'], axis=1).values\n",
     "DataY = data_df.WL.ravel()\n",
     "# range goes until 2016 not including (until 2015 including)\n",
-    "train = data_df.loc[data_df.Season.isin(range(2002, 2016))].drop(['WL','Season'], axis=1).index.values # use 2002-2015 as training\n",
+    "train = data_df.loc[data_df.Season.isin(range(2002, 2017))].drop(['WL','Season'], axis=1).index.values # use 2002-2015 as training\n",
     "test  = data_df.loc[data_df.Season == 2016].WL.index.ravel() # use 2016 as test\n",
     "\n",
-    "# Scenario 1 - all features - LR\n",
-    "DataX = data_df.drop(['WL','Season'], axis=1).values\n",
     "\n",
+    "'''\n",
+    "# LR\n",
     "logi = linear_model.LogisticRegression()\n",
     "logi.fit(DataX[train], DataY[train])\n",
-    "pred = logi.predict_proba(DataX[test])[:, 1] # get just the second array\n",
+    "#pred = logi.predict_proba(DataX[test])[:, 1] # get just the second array\n",
+    "'''\n",
     "\n",
-    "print(\"Log loss: {}\".format(metrics.log_loss(DataY[test], pred)))"
+    "# NN\n",
+    "stdScaler = StandardScaler()\n",
+    "X_train_scaled = stdScaler.fit_transform(DataX[train])\n",
+    "X_test_scaled = stdScaler.transform(DataX[test])\n",
+    "model = Sequential()\n",
+    "model.add(Dense(2560, input_dim=DataX[train].shape[1], init='normal', activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(18, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(18, activation='relu'))\n",
+    "model.add(Dense(1, init='normal', activation='sigmoid'))\n",
+    "sgd = SGD(lr=0.1, momentum=0.1, decay=0.0, nesterov=False)\n",
+    "model.compile(loss='binary_crossentropy', optimizer='sgd')\n",
+    "hist = model.fit(X_train_scaled, DataY[train], nb_epoch=20, batch_size=32, verbose=2, validation_split=0.1)\n",
+    "##pred = model.predict(X_test_scaled)[:, 0]\n",
+    "\n",
+    "#print(\"Log loss: {}\".format(metrics.log_loss(DataY[test], pred)))"
    ]
   },
   {
@@ -929,7 +1002,14 @@
    },
    "outputs": [],
    "source": [
-    "res = logi.predict_proba(GTData.drop(['Team_Id_x','Bracket_Name_x','Team_Id_y','Bracket_Name_y','dkey'], axis=1))[:, 1] # get just the second array"
+    "PRData = GTData.drop(['Team_Id_x','Bracket_Name_x','Team_Id_y','Bracket_Name_y','dkey'], axis=1)\n",
+    "\n",
+    "# LR\n",
+    "#res = logi.predict_proba(PRData)[:, 1] # get just the second array\n",
+    "\n",
+    "# NN\n",
+    "X_test_scaled = stdScaler.transform(PRData)\n",
+    "res = model.predict(X_test_scaled)[:, 0]"
    ]
   },
   {
@@ -983,7 +1063,7 @@
        "      <td>Arizona</td>\n",
        "      <td>1116</td>\n",
        "      <td>Arkansas</td>\n",
-       "      <td>0.675021</td>\n",
+       "      <td>0.604869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -991,7 +1071,7 @@
        "      <td>Arizona</td>\n",
        "      <td>1124</td>\n",
        "      <td>Baylor</td>\n",
-       "      <td>0.446429</td>\n",
+       "      <td>0.471982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -999,7 +1079,7 @@
        "      <td>Arizona</td>\n",
        "      <td>1137</td>\n",
        "      <td>Bucknell</td>\n",
-       "      <td>0.929371</td>\n",
+       "      <td>0.792402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1007,7 +1087,7 @@
        "      <td>Arizona</td>\n",
        "      <td>1139</td>\n",
        "      <td>Butler</td>\n",
-       "      <td>0.621889</td>\n",
+       "      <td>0.603954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1015,7 +1095,7 @@
        "      <td>Arizona</td>\n",
        "      <td>1153</td>\n",
        "      <td>Cincinnati</td>\n",
-       "      <td>0.608342</td>\n",
+       "      <td>0.600465</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1023,11 +1103,11 @@
       ],
       "text/plain": [
        "   Team_Id_x Bracket_Name_x  Team_Id_y Bracket_Name_y  Prediction\n",
-       "1       1112        Arizona       1116       Arkansas    0.675021\n",
-       "2       1112        Arizona       1124         Baylor    0.446429\n",
-       "3       1112        Arizona       1137       Bucknell    0.929371\n",
-       "4       1112        Arizona       1139         Butler    0.621889\n",
-       "5       1112        Arizona       1153     Cincinnati    0.608342"
+       "1       1112        Arizona       1116       Arkansas    0.604869\n",
+       "2       1112        Arizona       1124         Baylor    0.471982\n",
+       "3       1112        Arizona       1137       Bucknell    0.792402\n",
+       "4       1112        Arizona       1139         Butler    0.603954\n",
+       "5       1112        Arizona       1153     Cincinnati    0.600465"
       ]
      },
      "execution_count": 12,
